# wagtail-custom-code-editor

./: .gitignore  MANIFEST.in  Makefile  README.md  getfiles.py  pyproject.toml  runtests.py  setup.py
.github/workflows/: github-actions-check.yml
docs/: django-admin.md  extend-functionality.md  modes.md  options.md  settings.md
tests/: simple.md
tests/testapp/: manage.py  test_edit_handlers.py  test_widget.py
tests/testapp/core/: models.py  tests.py
tests/testapp/core/migrations/: 0001_initial.py
tests/testapp/core/templates/core/: custom_code_editor_page.html
tests/testapp/testapp/: settings.py  urls.py
wagtail_custom_code_editor/: apps.py  blocks.py  edit_handlers.py  fields.py  panels.py  settings.py  types.py  wagtail_hooks.py  widgets.py
wagtail_custom_code_editor/static/wagtail_custom_code_editor/css/: code.css
wagtail_custom_code_editor/static/wagtail_custom_code_editor/js/: custom-code-editor-block-widget.js  custom-code-editor-controller.js  custom-code-editor.js
wagtail_custom_code_editor/templates/: code.html
wagtail_custom_code_editor/templatetags/: custom_code_editor_helper.py
