[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wagtail-custom-code-editor"
version = "0.1"
dependencies = [
    "django>=4.2",  # Replace "X.Y" as appropriate
]
description = "An Ace Editor that works in Wagtail CMS"
readme = "README.md"
authors = [
    {name = "Amin Shazrin", email = "aminshazrin@yahoo.com"},
]
keywords = [
    "wagtail",
    "cms",
    "custom-code-editor",
    "editor",
    "code",
    "acejs",
    "wagtailcms",
    "wagtail-cms",
    "field",
    "field-block",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: X.Y",  # Replace "X.Y" as appropriate
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://www.example.com/"